--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,25 @@
 .background-color {
     background-color: #f5d9d5
   }
+
+  body {
+    font-family: 'Josefin Sans', sans-serif;
+  }
+
+  #mainNavbar {
+    font-weight: 200;
+    font-size: 1.5rem;
+  }
+
+  #mainNavbar .navbar-brand {
+    color: #EA1C2C;
+    font-size: 1.5rem;
+  }
+
+  #mainNavbar .nav-link {
+    color: white;
+  }
+
+  #mainNavbar .nav-link:hover {
+    color: #EA1C2C;
+  }
