--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,16 @@
     font-family: 'Josefin Sans', sans-serif;
   }
 
+  .blurb h2 {
+    color: #EA1C2C;
+    font-size: 2.5rem;
+  }
+
+  .blurb p {
+    color: #f498b8;
+    font-weight: 400;
+    line-height: 2;
+  }
   #mainNavbar {
     font-weight: 200;
     font-size: 1.5rem;
@@ -30,6 +40,10 @@
 
   #headingGroup h1{
     font-size: 3rem;
+  }
+
+  .navbar.scrolled {
+    background: rgb(222,192,222);
   }
 
   @media only screen and (max-width: 1200px) {
